solving code smells based on quadana report